# budget-app

./: .dockerignore  .env.example  .flake8  .gitignore  BUDGET_APP_ROADMAP.md  CLAUDE.md  Dockerfile  PROJECT_CONTEXT_SUMMARY.md  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test_bank_statement.ofx  test_import.csv
apps/budgets/: admin.py  urls.py  views.py
apps/budgets/management/commands/: import_budget_items.py  import_budget_items_fast.py  import_from_smalltalk.py  seed_data.py
apps/budgets/migrations/: 0001_initial.py  0002_migrate_category_to_many_to_many.py  0003_alter_budgetitem_import_source_and_more.py
apps/budgets/models/: __init__.py  accounting_category.py  budget.py  budget_group.py  budget_item.py  budget_item_relation.py  category.py  member.py  source.py  vendor.py
apps/budgets/tests/: factories.py  test_models.py
apps/core/: models.py
apps/imports/: admin.py
apps/imports/migrations/: 0001_initial.py
apps/imports/models/: __init__.py  import_tracker.py
apps/imports/parsers/: csv_parser.py  ofx_parser.py  xml_parser.py
apps/imports/services/: import_service.py
config/: urls.py
config/settings/: __init__.py  base.py  development.py  production.py  test.py
desktop/: INSTALL.md  README.md  main.js  package.json  preload.js  setup.sh
desktop/assets/: README.md
templates/: base.html
templates/budgets/: budget_confirm_delete.html  budget_copy.html  budget_detail.html  budget_form.html  budget_list.html  bulk_upload_preview.html
